Tech stack in bold

--- a/docs/main.scss
+++ b/docs/main.scss
@@ -210,6 +210,9 @@ h3.experience-title {
     color:white;
     margin-bottom:15px;;
 }
+.tech-stack {
+    font-weight: bold;
+}
 }
 
 .section-padding {
