Adjust design of the tech stack element

--- a/docs/main.scss
+++ b/docs/main.scss
@@ -210,7 +210,7 @@ h3.experience-title {
     color:white;
     margin-bottom:15px;;
 }
-.tech-stack {
+p.tech-stack {
     font-weight: bold;
 }
 }
